# bracing2d

./: CMakeLists.txt  README.md
01-gravity_compensation/: 4pbot_floating.urdf  CMakeLists.txt  simulation_main.cpp  visualizer_main.cpp  world.urdf
02-energy_efficiency/: CMakeLists.txt  app.cpp  controller_main.cpp  simulation_main.cpp  visualizer_main.cpp  world.urdf
02-energy_efficiency/data_logging/: logger.py  plotter.py
02-energy_efficiency/data_logging/data/: data.txt
03-contact_identification/: CMakeLists.txt  analytical.cpp  particle_filter.cpp  world.urdf
03-contact_identification/data_logging/: plotter.py
04-free_space_2d_bracing/: 4rbot_fixed.urdf  CMakeLists.txt  app.cpp  app_bracing_task.cpp  world.urdf
04-free_space_2d_bracing/data_logging/: plotter.py
04-free_space_2d_bracing/data_logging/data/: data.txt  qwer.txt  test.txt
05-contact_task_2d_bracing/: 4rbot_fixed.urdf  CMakeLists.txt  app.cpp  world.urdf
05-contact_task_2d_bracing/data_logging/: plotter.py
05-contact_task_2d_bracing/data_logging/data/: data.txt
06-floating_base_2d/: 4rbot_floating.urdf  CMakeLists.txt  app.cpp  world.urdf
06-floating_base_2d/data_logging/: plotter.py
06-floating_base_2d/data_logging/data/: data.txt
06-floating_base_2d/data_logging/plotting_presentation/: data.txt  plotter.py
